# CUDA-exercises

./: answer.txt
exercise0/: Makefile
exercise0/src/: llist.cpp  llist.h  main.cpp
exercise1/: 1.txt  CMakeLists.txt
exercise1/src/: emptykernel.cu
exercise2/: answers.txt
exercise2/scenes/: scene.yaml  scene2.yaml
exercise2/src/: main.cc  parser.cc  parser.h  ppm_writer.cc  raytracer.cc  raytracer.h  types.h
exercise3/: CMakeLists.txt
exercise3/scenes/: scene_angle.yaml  squirrel.yaml
exercise3/src/: copyprimitives.cu  copyprimitives.h  main.cc  parser.cc  ppm_writer.cc  raytracer.cc  types.cc  types.h
exercise3_1/: CMakeLists.txt  answer.txt
exercise3_1/src/: dotproduct.cu
exercise4/: CMakeLists.txt
exercise4/scenes/: squirrel.yaml  tetraeder.yaml
exercise4/src/: main.cc  parser.cc  ppm_writer.cc  raytracer.cu  raytracer.h  types.cc  types.h
exercise5/: CMakeLists.txt  answers.txt
exercise5/scenes/: double-torus.yaml  room.yaml  scene_angle.yaml  squirrel.yaml  tetraeder.yaml
exercise5/src/: main.cc  mainwindow.cc  ppm_writer.cc  raytracer.cu  types.h
exercise6/: CMakeLists.txt  answers.txt
exercise6/scenes/: squirrel.yaml
exercise6/src/: main.cc  mainwindow.cc  parser.cc  parser.h  postprocessing.cu  postprocessing.h  raytracer.cu  raytracer.h  types.h
exercise7/: CMakeLists.txt  answers.txt
exercise7/src/: mainwindow.h  mandelbrot.cc  mandelbrot.cl  ppm_writer.cc  ppm_writer.h  types.h
